@@ -17,6 +17,8 @@ Release 1.1.3-1.1 Start 27/04/2023 End 01/01/2024
 - 26/11/2023
 05. tcpserver.c: fixed TCPLOCALPORT not getting set
 - 01/01/2024 - indimail-mta-3.0.6
+- 08/02/2024
+06. installer.c: replace chown, chmod with fchown, fchmod
 
 * Sun Apr 23 2023 17:50:00 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 13/02/2023 End 23/04/2023
