@@ -27,6 +27,8 @@ Release 1.1.3-1.1 Start 27/04/2023 End 01/01/2024
 12. minisvc.in: added missing definitions for usefsync, usefdatasync,
     usesyncdir 
 - 01/01/2024 - indimail-mta-3.0.6
+- 08/02/2024
+13. installer.c: replace chown, chmod with fchown, fchmod
 
 * Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
